Fix gradient input layout jump in input-group
- Remove inconsistent margin-bottom for gradient inputs
- All inputs in input-group now have margin-bottom: 0

--- a/css/framework.css
+++ b/css/framework.css
@@ -3103,12 +3103,6 @@ button:disabled,
     margin-bottom: 0;
 }
 
-.input-group input.gradient,
-.input-group textarea.gradient,
-.input-group select.gradient {
-    margin-bottom: var(--space-2);
-}
-
 .input-row {
     display: flex;
     align-items: center;
